06 練習透過 ViewModel 建立頁面

--- a/Review20180707/Views/Shared/_Layout.cshtml
+++ b/Review20180707/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
+                    <lit>@Html.ActionLink("產品(Products)", "NewIndex", "Products")</lit>
                 </ul>
             </div>
         </div>
@@ -32,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 應用程式</p>
+            <p>&copy; @DateTime.Now.Year - 我的 2018/07/07回家練習歷程 ASP.NET 應用程式</p>
         </footer>
     </div>
 
