08 練習透過 Entity Framework 新增一筆 Product 資料

--- a/Review20180707/Views/Products/NewIndex.cshtml
+++ b/Review20180707/Views/Products/NewIndex.cshtml
@@ -6,6 +6,10 @@
 
 <h2>NewIndex</h2>
 
+<p>
+    @Html.ActionLink("新增", "AddNewProduct", "Products")
+</p>
+
 <table class="table">
     <tr>
         <th>
