--- a/Review20180707/Views/Shared/_Layout.cshtml
+++ b/Review20180707/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
-                    <lit>@Html.ActionLink("產品(Products)", "NewIndex", "Products")</lit>
+                    <li>@Html.ActionLink("產品(Products)", "NewIndex", "Products")</li>
                 </ul>
             </div>
         </div>
