09 練習透過 Entity Framework 更新一筆 Product 資料

--- a/Review20180707/Views/Products/NewIndex.cshtml
+++ b/Review20180707/Views/Products/NewIndex.cshtml
@@ -42,8 +42,8 @@
             @Html.DisplayFor(modelItem => item.Stock)
         </td>
         <td>
-            @Html.ActionLink("編輯", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("刪除", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("編輯", "NewEdit", new { id=item.ProductId }) |
+            @Html.ActionLink("刪除", "NewDelete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
 }
