--- a/Review20180707/Views/Products/NewIndex.cshtml
+++ b/Review20180707/Views/Products/NewIndex.cshtml
@@ -43,7 +43,7 @@
         </td>
         <td>
             @Html.ActionLink("編輯", "NewEdit", new { id=item.ProductId }) |
-            @Html.ActionLink("刪除", "NewDelete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("刪除", "NewDelete", new { id=item.ProductId })
         </td>
     </tr>
 }
